[gd_scene load_steps=8 format=3 uid="uid://bbiwn1p001e5x"]

[ext_resource type="Script" uid="uid://fwtand61x7p4" path="res://Scenes/UI/Debug/debug_menu.gd" id="1_ya07w"]
[ext_resource type="Theme" uid="uid://bxj0toenekelu" path="res://Assets/theme.tres" id="2_eafuu"]
[ext_resource type="Script" uid="uid://b2o3ijhl0pva" path="res://Scenes/UI/Debug/room_selector.gd" id="3_v10um"]

[sub_resource type="Animation" id="Animation_n4yyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7agmu"]
resource_name = "enter"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kv3r7"]
resource_name = "exit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vf74j"]
_data = {
&"RESET": SubResource("Animation_n4yyk"),
&"enter": SubResource("Animation_7agmu"),
&"exit": SubResource("Animation_kv3r7")
}

[node name="DebugMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_ya07w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_eafuu")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DebugInfo" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="KeybindsTitle" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Keybinds"
horizontal_alignment = 2

[node name="KeybindsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="KeybindNames" type="Label" parent="Control/MarginContainer/VBoxContainer/KeybindsContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "room switcher
show this menu
reset room"
horizontal_alignment = 2

[node name="FakeVSeparator" type="Label" parent="Control/MarginContainer/VBoxContainer/KeybindsContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = " | 
 | 
 | "

[node name="KeybindKeys" type="Label" parent="Control/MarginContainer/VBoxContainer/KeybindsContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "F1
F3
F5"
horizontal_alignment = 2

[node name="RoomSelector" type="Panel" parent="Control/MarginContainer"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_eafuu")
script = ExtResource("3_v10um")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/RoomSelector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/RoomSelector/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/RoomSelector/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Room Selector"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/RoomSelector/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/RoomSelector/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vf74j")
}
